Closed
Bug 1101223
Opened 9 years ago
Closed 9 years ago
Assertion failure if child races
Categories
(Core :: Storage: IndexedDB, defect)
Core
Storage: IndexedDB
Tracking
()
RESOLVED
FIXED
mozilla36
Tracking | Status | |
---|---|---|
firefox34 | --- | unaffected |
firefox35 | --- | fixed |
firefox36 | --- | fixed |
People
(Reporter: bent.mozilla, Assigned: bent.mozilla)
References
Details
Attachments
(1 file)
6.07 KB,
patch
|
khuey
:
review+
lsblakk
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
There's a subtle race here when the child aborts a transaction but the parent has already sent a success event for another request. That causes some assertions to fire. This patch just moves the functions around and the adds an error path in DispatchSuccessEvent.
Attachment #8524916 -
Flags: review?(khuey)
Attachment #8524916 -
Flags: review?(khuey) → review+
Assignee | ||
Comment 1•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/8aad62212367
Assignee | ||
Updated•9 years ago
|
Blocks: IndexedDB-on-PBackground
Comment 2•9 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/8aad62212367
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
Assignee | ||
Comment 3•9 years ago
|
||
Comment on attachment 8524916 [details] [diff] [review] Patch, v1 Approval Request Comment [Feature/regressing bug #]: 994190 [User impact if declined]: Debug builds occasionally assert when using indexedDB, and release builds might see success events when they're supposed to receive error events, making [Describe test coverage new/current, TBPL]: There's no real test coverage for this because it's a race condition that is hard to make happen [Risks and why]: Very low risk [String/UUID change made/needed]: None
Attachment #8524916 -
Flags: approval-mozilla-aurora?
Updated•9 years ago
|
Attachment #8524916 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Assignee | ||
Comment 4•9 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/210f8669a990
You need to log in
before you can comment on or make changes to this bug.
Description
•