Bug 1101223 - Fix assertion failure for IndexedDB child-side race, r=khuey, a=lsblakk.